<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res/com.cc.signalinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.GridLayout
            android:id="@+id/deviceInfoGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            grid:columnCount="2">

            <com.google.ads.AdView
                android:id="@+id/adView"
                ads:adSize="BANNER"
                ads:adUnitId="a150a0f996cbdbd"
                grid:layout_columnSpan="2"
                grid:layout_gravity="center" />

            <TextView
                android:contentDescription="@string/deviceInfoDescription"
                android:text="@string/deviceInfoTitle"
                android:textSize="20sp"
                grid:layout_columnSpan="2" />


            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/deviceNameLabel"
                grid:layout_gravity="start" />

            <TextView
                android:id="@+id/deviceName"
                android:contentDescription="@string/deviceNameDescription"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/deviceModelLabel" />

            <TextView
                android:id="@+id/deviceModel"
                android:contentDescription="@string/deviceModelDescription"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/androidVersionLabel" />

            <TextView
                android:id="@+id/androidVersion"

                android:contentDescription="@string/androidVersionDescription"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/carrierNameLabel" />

            <TextView
                android:id="@+id/carrierName"
                android:contentDescription="@string/carrierNameDescription"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/buildHostLabel" />

            <TextView
                android:id="@+id/buildHost"
                android:contentDescription="@string/buildHostDescription"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/networkTypeLabel" />

            <TextView
                android:id="@+id/networkType"
                android:contentDescription="@string/networkTypeDescription"
                android:tag="13"
                android:text="@string/na" />

        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/signalGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deviceInfoGrid"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            grid:columnCount="2">

            <TextView
                android:contentDescription="@string/cdmaTitleDescription"
                android:paddingTop="10dp"
                android:text="@string/cdmaTitle"
                android:textSize="20sp"
                grid:layout_columnSpan="2" />


            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/cdmaRSSI" />

            <TextView
                android:id="@+id/cdmaRSSI"
                android:contentDescription="@string/cdmaRssiDescription"
                android:tag="3"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/evdoRSSI" />

            <TextView
                android:id="@+id/evdoRSSI"
                android:contentDescription="@string/evdoRssiDescription"
                android:tag="5"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/cdmaECIO" />

            <TextView
                android:id="@+id/cdmaECIO"
                android:contentDescription="@string/cdmaEcioDescription"
                android:tag="4"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/evdoECIO" />

            <TextView
                android:id="@+id/evdoECIO"
                android:contentDescription="@string/evdoEcioDescription"
                android:tag="6"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/evdoSNR" />

            <TextView

                android:id="@+id/evdoSNR"
                android:contentDescription="@string/evdoSnrDescription"
                android:tag="7"
                android:text="@string/na" />

            <TextView
                android:contentDescription="@string/gsmTitleDescription"
                android:paddingTop="10dp"
                android:text="@string/gsmTitle"
                android:textSize="20sp"
                grid:layout_columnSpan="2" />


            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/gsmRSSI" />

            <TextView
                android:id="@+id/gsmRSSI"
                android:contentDescription="@string/gsmRssiDescription"
                android:tag="15"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/gsmSigStrength" />

            <TextView
                android:id="@+id/gsmSigStrength"
                android:contentDescription="@string/gsmSigStrengthDescription"
                android:tag="1"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/gsmECIO" />

            <TextView
                android:id="@+id/gsmECIO"
                android:contentDescription="@string/gsmEcioDescription"
                android:tag="1"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/gsmBitError" />

            <TextView
                android:id="@+id/gsmBitError"
                android:contentDescription="@string/gsmBitErrorDescription"
                android:tag="2"
                android:text="@string/na" />


            <TextView
                android:contentDescription="@string/lteTitleDescription"
                android:paddingTop="10dp"
                android:text="@string/lteTitle"
                android:textSize="20sp"
                grid:layout_columnSpan="2" />


            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/lteRSRP" />

            <TextView
                android:id="@+id/lteRSRP"
                android:contentDescription="@string/lteRsrpDescription"
                android:tag="9"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/lteRSSI" />

            <TextView
                android:id="@+id/lteRSSI"
                android:contentDescription="@string/lteRssiDescription"
                android:tag="14"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/lteRSRQ" />

            <TextView
                android:id="@+id/lteRSRQ"
                android:contentDescription="@string/lteRsrqDescription"
                android:tag="10"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/lteSNR" />

            <TextView
                android:id="@+id/lteSNR"
                android:contentDescription="@string/lteSnrDescription"
                android:tag="11"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/lteCQI" />

            <TextView
                android:id="@+id/lteCQI"
                android:contentDescription="@string/lteCqiDescription"
                android:tag="12"
                android:text="@string/na" />

            <TextView
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/lteSigStrength" />

            <TextView
                android:id="@+id/lteSigStrength"
                android:contentDescription="@string/lteSigStrengthDescription"
                android:tag="8"
                android:text="@string/na" />

        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/debugGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signalGrid"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            grid:columnCount="1">

            <TextView
                android:id="@+id/debugInfo"
                android:contentDescription="@string/debugInfoDescription"
                android:enabled="false"
                android:paddingTop="10dp"
                android:text="@string/debugInfo"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugArray"
                android:contentDescription="@string/debugArrayDescription"
                android:enabled="false"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:visibility="gone" />

            <TextView
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/additionalInfoLbl"
                android:textSize="16sp" />

            <Button
                android:id="@+id/additionalInfo"
                android:contentDescription="@string/additionalInfoDescription"
                android:text="@string/additionalInfoBtnTxt" />

            <TextView
                android:id="@+id/copyright"
                android:contentDescription="@string/copyrightDescription"
                android:text="@string/copyright"
                grid:layout_gravity="center_horizontal|bottom" />

        </android.support.v7.widget.GridLayout>
    </RelativeLayout>
</ScrollView>